...
      );

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text(widget.isEditing ? 'Editar Anamnese' : 'Anamnese'),
        automaticallyImplyLeading: widget.isEditing,
        actions: widget.isEditing
            ? null
            : [
                TextButton(
                  onPressed: _isLoading ? null : () => _submit(true),
                  child: Text(
                    'Pular',
                    style: TextStyle(color: Colors.grey[400]),
                  ),
                ),
              ],
      ),
      body: Form(
...
